cmake_minimum_required(VERSION 3.1)
project(socket04)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
#set(CMAKE_CC_FLAGES "-g -Wall")
add_compile_options(-g -Wall)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_executable(01echosrv 01echosrv.c specifiedLen.c)
add_executable(02echocli 02echocli.c specifiedLen.c)
# add_executable(03p2psrv 03p2psrv.c)
# add_executable(04p2pcli 04p2pcli.c)
# add_library(specifiedLen specifiedLen.c)
target_include_directories(01echosrv PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(02echocli PUBLIC ${PROJECT_SOURCE_DIR})
